# LearningQt5

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-linux.yml
